Prevent flickering effect when dragging components

--- a/resources/less/editor.less
+++ b/resources/less/editor.less
@@ -237,7 +237,6 @@ form > div > .editor-form__component-wrapper {
   border: 1px dashed @section-gray-border;
   border-radius: 2px;
   background-color: #F7F7F7;
-  margin-top: 21px;
   margin-bottom: 14px;
   padding: 0.5em;
   height: 43px;
@@ -304,12 +303,16 @@ form > div > .editor-form__component-wrapper {
   .editor-form__undo-box--link { font-size: 20px; }
 }
 
-.editor-form__drag_n_drop_spacer--shrinked {
-  height: 17px;
-  margin: 0px;
+.editor-form__drag_n_drop_spacer_container {
+  padding-top: 17px;
+  padding-bottom: 17px;
 }
 
-.editor-form__drag_n_drop_spacer--expanded {
+.editor-form__drag_n_drop_spacer--dashbox-hidden {
+  visibility: hidden;
+}
+
+.editor-form__drag_n_drop_spacer--dashbox-visible {
   height: 100px;
   margin: 14px 0px;
   border: 1px dashed #cccccc;
